--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -308,3 +308,58 @@ li img {
         float: none;
     }
 }
+
+
+
+
+
+//navigationnavigationnavigationnavigationnavigationnavigationnavigationnavigationnavigationnavigationnavigationnavigationnavigationnavigation
+
+
+*{ margin:0; padding:0;}
+.clear { clear:both;}
+
+
+
+.bar { width:780px; height:36px; margin:0px auto; background:-webkit-gradient(linear, left bottom, left top, color-stop(0, #747474), color-stop(0.5, #6E6E6E), color-stop(0.51, #7E7E7E), color-stop(1, #8D8D8D));
+
+
+
+
+
+
+  border-radius: 5px;}
+ul,li {list-style:none; margin:0; padding:0;}
+.nav {float:left;height:36px;overflow:hidden;}
+.nav li {float:left; height:36px; line-height:36px; width:102px; overflow:hidden; border-right:1px #808080 solid;}
+.nav li a { font-family:Arial; font-size:14px;display:block; padding:0px 10px; text-decoration:none; text-align:center;color:#ffffff;}
+.nav li a:hover {background: #363636}
+
+
+
+
+
+
+.nav li .current,
+.nav li .current:hover { background:-webkit-gradient(linear, 0 0, 0 100%, from(#373737), to(#525051)); background:-moz-linear-gradient(top, #373737, #525051); -webkit-box-shadow:inset 0 -10px 20px rgba(0,0,0,.05), inset 0 2px 5px #363636, inset 0 0 0 1px rgba(255,255,255,.1); -moz-box-shadow:inset 0 -10px 20px rgba(0,0,0,.05), inset 0 2px 5px #363636, inset 0 0 0 1px rgba(255,255,255,.1); color:#fff; text-shadow:0 1px #242323; }
+
+
+
+
+
+
+
+
+
+
+
+.searchbox { float:right;height:36px; padding-right:10px;}
+.search_box {height:20px; margin-top:7px; }
+.search {height:20px; line-height:20px;padding:0px 
+22px; 
+
+//search图片和光标的距离
+
+
+border:1px #ddd solid; background: url(search.png)  no-repeat; outline: none; width:88px;
+  border-radius: 20px;}
