--- a/stylesheets/styles1.css
+++ b/stylesheets/styles1.css
@@ -16,7 +16,7 @@ body {
 
 .wrapper {
     width: 780px;
-    margin: 0 auto;
+    margin: 0 100px;
     background: #DEDEDE;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px, rgba(0, 0, 0, 0.45) 0 3px 10px;
@@ -48,7 +48,7 @@ strong {
 
 
 section {
-    padding: 105px 20px;
+    padding: 15px 20px;
     font-size: 15px;
     border-top: 1px solid #fff;
     background: linear-gradient(#fafafa, #dedede 700px);
