--- a/stylesheets/styles3.css
+++ b/stylesheets/styles3.css
@@ -16,7 +16,7 @@ body {
 
 .wrapper {
     width: 640px;
-    margin: 0 auto;
+    margin: 0 100px 100px;
     background: #DEDEDE;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px, rgba(0, 0, 0, 0.45) 0 3px 10px;
