--- a/stylesheets/styles3.css
+++ b/stylesheets/styles3.css
@@ -16,7 +16,7 @@ body {
 
 .wrapper {
     width: 640px;
-    margin: 0 100px 100px;
+    margin: 0 auto;
     background: #DEDEDE;
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px, rgba(0, 0, 0, 0.45) 0 3px 10px;
@@ -160,7 +160,8 @@ header ul a strong {
 }
 
 section {
-    padding: 15px 20px;
+//padding: 15px 20px;
+    padding: 15% 20px;
     font-size: 15px;
     border-top: 1px solid #fff;
     background: linear-gradient(#fafafa, #dedede 700px);
