--- a/stylesheets/styles3.css
+++ b/stylesheets/styles3.css
@@ -161,7 +161,7 @@ header ul a strong {
 
 section {
 //padding: 15px 20px;
-    padding: 15% 20px;
+    padding: 15px 20%;
     font-size: 15px;
     border-top: 1px solid #fff;
     background: linear-gradient(#fafafa, #dedede 700px);
@@ -176,7 +176,7 @@ section.euclidea3 ul a.showfig {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    color: #222;
+//color: #222;
     padding: 0;
     margin: 10px 0 20px;
     line-height: 1.2;
