--- a/stylesheets/styles3.css
+++ b/stylesheets/styles3.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+
 
 html {
     background: #6C7989;
@@ -369,7 +369,7 @@ li img {
 
 
 
-.bar { width:780px; height:36px; margin:0px auto; background:-webkit-gradient(linear, left bottom, left top, color-stop(0, #747474), color-stop(0.5, #6E6E6E), color-stop(0.51, #7E7E7E), color-stop(1, #8D8D8D));
+.bar { width:57.821% ; height:36px; margin:0px auto; background:-webkit-gradient(linear, left bottom, left top, color-stop(0, #747474), color-stop(0.5, #6E6E6E), color-stop(0.51, #7E7E7E), color-stop(1, #8D8D8D));
 
 
 
